전남대 BE_김보민_3주차 과제(2단계) (#416)
* docs : 2단계 - 연관 관계 매핑 구현할 기능 목록 정리

* refactor : Member 검증 메서드 분리

* refactor : Product 검증 메서드 분리

* refactor : 생성자 주입 -> 필드 주입

* feat : MemberRepositoryTest 수정
@BeforeEach 사용 및 테스트 코드 추가

* feat : WishlistRepositoryTest
@BeforeEach 사용

* feat : ProductRepositoryTest 수정
@BeforeEach 사용 및 테스트 코드 추가

* feat : Transactional(readOnly=true) 사용
조회 쿼리에 성능 최적화와 안정성을 위해 사용해줍니다.

* feat : ManyToOne 사용
wishlist와 Product는 다대일, wishlist와 Member는 다대일이므로 ManyToOne을 사용했습니다.

* feat : Member - OneToMany 사용
Member와 Wishlist는 일대다 이므로 OneToMany를 사용했습니다.

* feat : Product - OneToMany 사용
Product와 Wishlist는 일대다 이므로 OneToMany를 사용했습니다.

* feat : WishlistRepository 수정
Wishlist의 String memberEmail과 Long productId가 Member와 Product로 변경되었으므로 WishlistRepository도 수정해줍니다.

* feat : WishlistService 수정
Wishlist의 String memberEmail과 Long productId가 Member와 Product로 변경되었으므로 WishlistRepository도 수정해줍니다.

* feat : Cascade 추가
부모 데이터가 지워지면 자식 데이터도 지워질 수 있도록 cascade를 추가합니다. type은 remove입니다.

* feat : WishlistRepositoryTest 수정
Wishlist의 String memberEmail과 Long productId가 Member와 Product로 변경되었으므로 WishlistRepositoryTest도 수정해줍니다.

* refactor : 코드 수정

* refactor : 검증 케이스 합치기

* refactor : wishlistList -> wishlists로 변경

* refactor : Transactional(readOnly=true) 클래스 레벨로 선언

* refactor : Test 코드 수정