@@ -1,40 +1,49 @@
 package gift.service;
 
+import gift.model.Member;
 import gift.model.Product;
 import gift.model.Wishlist;
 import gift.repository.WishlistRepository;
-import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
+@Transactional(readOnly = true)
 public class WishlistService {
 
     private final WishlistRepository wishlistRepository;
+    private final MemberService memberService;
     private final ProductService productService;
 
-    public WishlistService(WishlistRepository wishlistRepository, ProductService productService) {
+    public WishlistService(WishlistRepository wishlistRepository, MemberService memberService,
+        ProductService productService) {
         this.wishlistRepository = wishlistRepository;
+        this.memberService = memberService;
         this.productService = productService;
     }
 
     public List<Product> getWishlist(String email) {
-        List<Wishlist> wishlistItems = wishlistRepository.findByMemberEmail(email);
+        Member member = memberService.findMemberByEmail(email);
+        List<Wishlist> wishlistItems = wishlistRepository.findByMember(member);
         return wishlistItems.stream()
-            .map(item -> productService.findProductsById(item.getProductId()))
-            .collect(Collectors.toList());
+            .map(Wishlist::getProduct)
+            .toList();
     }
 
     @Transactional
     public void addWishlist(String email, Long productId) {
-        Wishlist wishlist = new Wishlist(null, email, productId);
+        Member member = memberService.findMemberByEmail(email);
+        Product product = productService.findProductsById(productId);
+        Wishlist wishlist = new Wishlist(null, member, product);
         wishlistRepository.save(wishlist);
     }
 
     @Transactional
     public void removeWishlist(String email, Long productId) {
-        wishlistRepository.deleteByMemberEmailAndProductId(email, productId);
+        Member member = memberService.findMemberByEmail(email);
+        Product product = productService.findProductsById(productId);
+        wishlistRepository.deleteByMemberAndProduct(member, product);
     }
 }
